Disk based storage beginning

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,4 +1,22 @@
+<!DOCTYPE html>
 <html>
-  <h1>Test</h1>
-  <p><%= @grid %></p>
+  <h1>Current Board State:</h1>
+  <p><%= grid %></p>
+  <table>
+    <tr>
+      <td><form method="post" action="/make-move/0"><input type="submit"></td>
+      <td><button></td>
+      <td><button></td>
+    </tr>
+    <tr>
+      <td><button></td>
+      <td><button></td>
+      <td><button></td>
+    </tr>
+    <tr>
+      <td><button></td>
+      <td><button></td>
+      <td><button></td>
+    </tr>
+  </table>
 </html>
