AI and Human player moves are now displayed on the printed grid in the UI

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,19 +4,19 @@
   <p><%= grid %></p>
   <table>
     <tr>
-      <td><form method="post" action="/make-move/0"><input type="submit"></td>
-      <td><button></td>
-      <td><button></td>
+      <td><form method="post" action="/make-move/0"><button/></form></td>
+      <td><form method="post" action="/make-move/1"><button/></form></td>
+      <td><form method="post" action="/make-move/2"><button/></form></td>
     </tr>
     <tr>
-      <td><button></td>
-      <td><button></td>
-      <td><button></td>
+      <td><form method="post" action="/make-move/3"><button/></form></td>
+      <td><form method="post" action="/make-move/4"><button/></form></td>
+      <td><form method="post" action="/make-move/5"><button/></form></td>
     </tr>
     <tr>
-      <td><button></td>
-      <td><button></td>
-      <td><button></td>
+      <td><form method="post" action="/make-move/6"><button/></form></td>
+      <td><form method="post" action="/make-move/7"><button/></form></td>
+      <td><form method="post" action="/make-move/8"><button/></form></td>
     </tr>
   </table>
 </html>
