--- a/lib/public/styles.css
+++ b/lib/public/styles.css
@@ -1,12 +1,12 @@
-#header {
+h1 {
   color: white;
-  font-size: 20px;
+  font-size: 50px;
   text-align: center;
   font-family: sans-serif;
 }
 
 body {
-  background-color: coral;
+  background-color: #81C784;
 }
 
 #main {
@@ -45,18 +45,28 @@ td {
   border: 1px solid black;
   padding: 0px;
   text-align: center;
-
   }
 
-  #MyTable td:hover { 
-    background-color: rgb(255, 171, 140);
+   #MyTable button:hover { 
+    background-color: #1b5e20;
  }
  
  button {
-   height: 150px;
-   width: 150px;
+   height: 170px;
+   width: 170px;
    padding: 0px;
    border: none;
    background-color: whitesmoke;
    font-size: 30px;
+   color: #81C784;
+ }
+
+ .reset {
+  height: 50px;
+  width: 100px;
+  padding: 0px;
+  border: none;
+  background-color: #e53935;
+  font-size: 30px;
+  color: whitesmoke;
  }
