--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -7,6 +7,11 @@
     <h1>TIC TAC TOE</h1>
     <h1><form id=form-reset method="post" action="/reset"><button class=reset> RESET</button></form></h1>
     <h2><%= result %></h2>
+    
+      <% if invalid_move %>
+        <h2> Invalid Move </h2>
+        <% end %>
+
     <table id=MyTable>
       <tr>
         <td><form method="post" action="/make-move/0"><button><%= grid[0] %></button></form></td>
